fix : upgrading